--- a/scripts/dataset_analytics.ipynb
+++ b/scripts/dataset_analytics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "      <th>Class</th>\n",
        "      <th>N_query</th>\n",
        "      <th>N_document</th>\n",
-       "      <th>Avg_documnet_per_query</th>\n",
+       "      <th>Avg_document_per_query</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -101,7 +101,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    Class  N_query  N_document  Avg_documnet_per_query\n",
+       "    Class  N_query  N_document  Avg_document_per_query\n",
        "0   A42B3      163         502                    3.08\n",
        "1  A62B18       79         201                    2.54\n",
        "2  F04D17       44         103                    2.34\n",
@@ -112,7 +112,7 @@
        "7   Total      730        1765                    2.47"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
     "            'Class': class_folder,\n",
     "            'N_query': query_count,\n",
     "            'N_document': document_count,\n",
-    "            'Avg_documnet_per_query': avg_document_per_query\n",
+    "            'Avg_document_per_query': avg_document_per_query\n",
     "            })\n",
     "        \n",
     "        total_query_count += query_count\n",
@@ -165,7 +165,7 @@
     "    'Class': 'Total',\n",
     "    'N_query': total_query_count,\n",
     "    'N_document': total_document_count,\n",
-    "    'Avg_documnet_per_query': round(total_avg_document_per_query/n_class, 2)\n",
+    "    'Avg_document_per_query': round(total_avg_document_per_query/n_class, 2)\n",
     "})\n",
     "\n",
     "# Convert the list of statistics into a Pandas DataFrame\n",
