add part to control scraping process

--- a/scripts/calculate_dataset_analytics.ipynb
+++ b/scripts/calculate_dataset_analytics.ipynb
@@ -4,6 +4,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Check Scraping\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: 163\t Image: 163\t CPC: A42B3\t Type: query\n",
+      "Text: 79\t Image: 79\t CPC: A62B18\t Type: query\n",
+      "Text: 44\t Image: 44\t CPC: F04D17\t Type: query\n",
+      "Text: 46\t Image: 46\t CPC: F16H1\t Type: query\n",
+      "Text: 60\t Image: 60\t CPC: F16L1\t Type: query\n",
+      "Text: 306\t Image: 306\t CPC: G02C5\t Type: query\n",
+      "Text: 32\t Image: 32\t CPC: H02K19\t Type: query\n",
+      "\n",
+      "\n",
+      "Text: 502\t Image: 502\t CPC: A42B3\t Type: document\n",
+      "Text: 201\t Image: 201\t CPC: A62B18\t Type: document\n",
+      "Text: 103\t Image: 103\t CPC: F04D17\t Type: document\n",
+      "Text: 93\t Image: 93\t CPC: F16H1\t Type: document\n",
+      "Text: 171\t Image: 171\t CPC: F16L1\t Type: document\n",
+      "Text: 616\t Image: 616\t CPC: G02C5\t Type: document\n",
+      "Text: 79\t Image: 79\t CPC: H02K19\t Type: document\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "for CPC in os.listdir('/vast/marco/Data_Google_Patent/json/query'):\n",
+    "    json_path = os.listdir(f'/vast/marco/Data_Google_Patent/json/query/{CPC}')\n",
+    "    front_img_path = os.listdir(f'/vast/marco/Data_Google_Patent/front_imgs/query/{CPC}')\n",
+    "    print(f'Text: {len(json_path)}\\t Image: {len(front_img_path)}\\t CPC: {CPC}\\t Type: query')\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "for CPC in os.listdir('/vast/marco/Data_Google_Patent/json/document'):\n",
+    "    json_path = os.listdir(f'/vast/marco/Data_Google_Patent/json/document/{CPC}')\n",
+    "    front_img_path = os.listdir(f'/vast/marco/Data_Google_Patent/front_imgs/document/{CPC}')\n",
+    "    print(f'Text: {len(json_path)}\\t Image: {len(front_img_path)}\\t CPC: {CPC}\\t Type: document')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A42B3\tquery: 154\t document: 502\n",
+      "A62B18\tquery: 66\t document: 201\n",
+      "F04D17\tquery: 34\t document: 103\n",
+      "F16H1\tquery: 39\t document: 93\n",
+      "F16L1\tquery: 55\t document: 171\n",
+      "G02C5\tquery: 242\t document: 616\n",
+      "H02K19\tquery: 26\t document: 79\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "truth_dir = '/vast/marco/Data_Google_Patent/ground_truth'\n",
+    "\n",
+    "for file in os.listdir(truth_dir):\n",
+    "    file_path = os.path.join(truth_dir, file)\n",
+    "    with open(file_path, 'r') as f:\n",
+    "        data =json.load(f)\n",
+    "        total_elements = sum(len(value) for value in data.values() if isinstance(value, list))\n",
+    "        print(f'{file.replace(\".json\", \"\")}\\tquery: {len(data)}\\t document: {total_elements}')\n",
+    "\n",
+    "# It is normal that: N. of queries from turth file <= N. of initial queries.\n",
+    "# This is because when scraping document patents, if no documents are succesfully retrieved for a query, then no file are saved for that query.\n",
+    "# When truth is constructed starting from filename of document patent, then queries with no corresponsing documetns are discarded."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Calculate Dataset Analytics"
    ]
   },
